# GPGPUTasks2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THEORY_TASK.md
.github/: pull_request_example.md
.github/scripts/: install_intel_opencl.sh  install_intel_opencl_for_old_igpu_via_beignet.sh
.github/workflows/: cmake.yml
libs/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/libbase/: bbox2.h  data_type.h  fast_random.h  gtest_utils.cpp  gtest_utils.h  math.h  omp_utils.cpp  omp_utils.h  platform.h  point.h  runtime_assert.h  stats.h  string_utils.cpp  string_utils.h  timer.h
libs/clew/: CMakeLists.txt
libs/clew/libclew/: ocl_init.cpp  ocl_init.h
libs/gpu/: CMakeLists.txt
libs/gpu/libgpu/: LICENSE  context.cpp  context.h  device.cpp  device.h  device_memory_pool.cpp  device_memory_pool.h  device_test.cpp  gold_helpers.cpp  hexdumparray.cpp  shared_device_buffer.cpp  shared_device_buffer.h  shared_device_image.cpp  shared_device_image.h  shared_host_buffer.cpp  utils.cpp  utils.h  work_size.h
libs/gpu/libgpu/cuda/: cuda_api.cpp  enum.cpp  enum.h  exceptions.h  utils.cpp  utils.h
libs/gpu/libgpu/cuda/cu/: common.cu
libs/gpu/libgpu/opencl/: device_info.cpp  device_info.h  engine.cpp  engine.h  enum.cpp  enum.h  exceptions.h  utils.cpp  utils.h
libs/gpu/libgpu/opencl/cl/: atomic.cl  c_template.h  clion_defines.cl  common.cl  dummy_kernel.cl  opencl_program.h.in
libs/gpu/libgpu/opencl/tests/: aplusb_test.cpp
libs/gpu/libgpu/opencl/tests/kernels/: aplusb.cl  kernels.cpp  kernels.h
libs/gpu/libgpu/vulkan/: CMakeLists.txt  README.md  data_buffer.cpp  data_buffer.h  data_image.cpp  data_image.h  device.cpp  device.h  engine.cpp  engine.h  enum.cpp  enum.h  exceptions.h  utils.cpp  utils.h  vulkan_api_headers.cpp  vulkan_api_headers.h
libs/gpu/libgpu/vulkan/renderdoc/: renderdoc_app.h
libs/gpu/libgpu/vulkan/spirv_reflect/: shader_module_info.cpp  shader_module_info.h  spirv_reflect.cpp  spirv_reflect.h
libs/gpu/libgpu/vulkan/spirv_reflect/include/spirv/unified1/: spirv.h
libs/gpu/libgpu/vulkan/tests/: aplusb_test.cpp  atomic_add_test.cpp  batched_binary_search_test.cpp  buffers_magic_guards_test.cpp  image_conversion_from_float_to_T_test.cpp  interpolation_test.cpp  main.cpp  rasterization_blending_test.cpp  rasterization_test.cpp  test_utils.h
libs/gpu/libgpu/vulkan/tests/kernels/: aplusb.comp  atomic_add.comp  batched_binary_search.comp  defines.h  image_conversion_from_float_to_T.comp  image_interpolation.comp  kernels.cpp  kernels.h  rasterize.frag  rasterize.vert  rasterize_blending.frag  write_value_at_index.comp
libs/gpu/libgpu/vulkan/vk/: atomic.vk  binary_search.vk  common.vk  common_host.cpp  common_host.h  limits.vk  rassert.vk  vulkan_program.h.in
libs/images/: CMakeLists.txt
libs/images/libimages/: CImg.h  debug_io.cpp  debug_io.h  images.cpp  images.h
libs/json/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/libutils/: misc.cpp  misc.h
scripts/linux/: install_cuda_sdk.sh  install_dependencies.sh  install_opencl_cpu_driver.sh  install_vulkan_cpu_driver.sh  install_vulkan_sdk.sh
scripts/macos/: install_dependencies.sh  install_vulkan_sdk.txt
scripts/windows/: install_cuda.txt  install_dependencies.txt  install_opencl_preprocessor.txt  install_vulkan_sdk.txt
src/: debug.h  main.cpp  main_01_matrix_transpose.cpp  main_02_matrix_multiply.cpp  main_aplusb.cpp  main_aplusb_matrix.cpp  main_csr_spmv.cpp  main_mandelbrot.cpp  main_merge_sort.cpp  main_prefix_sum.cpp  main_radix_sort.cpp  main_sum.cpp
src/kernels/: defines.h  kernels.cpp  kernels.h
src/kernels/cl/: aplusb.cl  aplusb_matrix_bad.cl  aplusb_matrix_good.cl  fill_buffer_with_zeros.cl  mandelbrot.cl  matrix_01_transpose_naive.cl  matrix_02_transpose_coalesced_via_local_memory.cl  matrix_03_multiply_naive.cl  matrix_04_multiply_via_local_memory.cl  merge_sort.cl  prefix_sum_01_reduction.cl  prefix_sum_02_prefix_accumulation.cl  radix_sort_01_local_counting.cl  radix_sort_02_global_prefixes_scan_sum_reduction.cl  radix_sort_03_global_prefixes_scan_accumulation.cl  radix_sort_04_scatter.cl  sparse_csr_matrix_decomp.cl  sparse_csr_matrix_offsets.cl  sparse_csr_matrix_vector_multiplication.cl  sum_01_atomics.cl  sum_02_atomics_load_k.cl  sum_03_local_memory_atomic_per_workgroup.cl  sum_04_local_reduction.cl
src/kernels/cu/: aplusb.cu  aplusb_matrix_bad.cu  aplusb_matrix_good.cu  fill_buffer_with_zeros.cu  mandelbrot.cu  matrix_01_transpose_naive.cu  matrix_02_transpose_coalesced_via_local_memory.cu  matrix_03_multiply_naive.cu  matrix_04_multiply_via_local_memory.cu  matrix_05_multiply_wmma.cu  merge_sort.cu  prefix_sum_01_reduction.cu  prefix_sum_02_prefix_accumulation.cu  radix_sort_01_local_counting.cu  radix_sort_02_global_prefixes_scan_sum_reduction.cu  radix_sort_03_global_prefixes_scan_accumulation.cu  radix_sort_04_scatter.cu  sparse_csr_matrix_vector_multiplication.cu  sum_01_atomics.cu  sum_02_atomics_load_k.cu  sum_03_local_memory_atomic_per_workgroup.cu  sum_04_local_reduction.cu
src/kernels/cu/helpers/: rassert.cu
src/kernels/vk/: aplusb.comp  aplusb_matrix_bad.comp  aplusb_matrix_good.comp  fill_buffer_with_zeros.comp  mandelbrot.comp  matrix_01_transpose_naive.comp  matrix_04_multiply_via_local_memory.comp  matrix_05_multiply_cooperative_matrix.comp  merge_sort.comp  prefix_sum_01_reduction.comp  prefix_sum_02_prefix_accumulation.comp  radix_sort_02_global_prefixes_scan_sum_reduction.comp  radix_sort_03_global_prefixes_scan_accumulation.comp  radix_sort_04_scatter.comp  sparse_csr_matrix_vector_multiplication.comp  sum_01_atomics.comp  sum_02_atomics_load_k.comp  sum_03_local_memory_atomic_per_workgroup.comp  sum_04_local_reduction.comp
